code reorganization and updates to grunt tasks

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -31,8 +31,8 @@
     <![endif]-->
 
     <!--[if lt IE 9]>
-      <script src="bower_components/es5-shim/es5-shim.js"></script>
-      <script src="bower_components/json3/lib/json3.min.js"></script>
+      <script src="es5-shim/es5-shim.js"></script>
+      <script src="json3/lib/json3.min.js"></script>
     <![endif]-->
 
     <div id="coming-soon">
@@ -52,12 +52,12 @@
       s.parentNode.insertBefore(g,s)}(document,'script'));
     </script>
 
-    <!-- build:js(client) scripts/app.components.js -->
+    <!-- build:js scripts/app.components.js -->
     <script src="bower_components/angular/angular.js"></script>
     <!-- endbuild -->
 
     <!-- build:js scripts/app.concat.js -->
-    <script src="app.js"></script>
+    <script src="app/app.js"></script>
     <!-- endbuild -->
 
     <!-- build:js(dist) scripts/app.templates.js -->
