--- a/client/src/index.html
+++ b/client/src/index.html
@@ -44,14 +44,6 @@
       <div ng-view=""></div>
     </div>
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-    <script>
-      var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-      (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-      g.src='//www.google-analytics.com/ga.js';
-      s.parentNode.insertBefore(g,s)}(document,'script'));
-    </script>
-
     <!-- build:js scripts/app.components.js -->
     <script src="bower_components/angular/angular.js"></script>
     <!-- endbuild -->
@@ -63,5 +55,17 @@
     <!-- build:js(dist) scripts/app.templates.js -->
     <script src="scripts/app.templates.js"></script>
     <!-- endbuild -->
+
+    <!-- Google Analytics -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-42892769-1', 'dtangl.com');
+      ga('send', 'pageview');
+    </script>
+    
   </body>
 </html>
