working on mobile layout

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -60,6 +60,7 @@
     <!-- common module -->
     <script src="app/common/common.js"></script>
     <script src="app/common/services/utils.srv.js"></script>
+    <script src="app/common/directives/skrollr.dir.js"></script>
 
     <!-- home module -->
     <script src="app/home/home.js"></script>
